# freeout

./: .gitignore  Cargo.toml
benches/: outline_benchmark.rs
src/: lib.rs
src/entities/: mod.rs
src/entities/core/: block.rs  block_range.rs  freeout.rs  mod.rs  outline.rs  position.rs  words_statistics.rs
src/entities/reader/: mod.rs  reader_trait.rs
src/entities/visitor/: mod.rs  visitor_trait.rs
src/processes/: content_processor.rs  mod.rs
src/readers/: markdown.rs
src/utils/: block_range_utils.rs  block_utils.rs  freeout_utils.rs  mod.rs  pure_utils.rs  test_utils.rs  text_utils.rs
tests/fixtures/markdown/: long_chinese.md  minimal_eng.md  misleading_code.md  simple_eng.md
