[package]
name = "freeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.8" }
markdown = { version="1.0.0-alpha.14", features = ["serde"] }
rayon = "1.8.0"
chrono = "0.4.31"
blake3 = "1.5.0"
tracing = "0.1.40"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
itertools = "0.11.0"
tracing-test = "0.2.4"
unicode-segmentation = "1.10.1"
words-count = "0.1.6"

[dev-dependencies]
criterion = { version="0.5.1", features=["html_reports"]}

[[bench]]
name = "outline_benchmark"
harness = false